@@ -12,16 +12,19 @@ class GD2Test < Test::Unit::TestCase
       assert_equal 43, attachment.width
       assert_equal 55, attachment.height
       
-      thumb = attachment.thumbnails.detect { |t| t.filename =~ /_thumb/ }
-      geo   = attachment.thumbnails.detect { |t| t.filename =~ /_geometry/ }
+      thumb   = attachment.thumbnails.detect { |t| t.filename =~ /_thumb/ }
+      geo     = attachment.thumbnails.detect { |t| t.filename =~ /_geometry/ }
+      aspect  = attachment.thumbnails.detect { |t| t.filename =~ /_aspect/ }
       
       # test exact resize dimensions
       assert_equal 50, thumb.width
       assert_equal 51, thumb.height
       
-      # test geometry string
+      # test geometry strings
       assert_equal 31, geo.width
       assert_equal 40, geo.height
+      assert_equal 25, aspect.width
+      assert_equal 25, aspect.height
     end
   else
     def test_flunk
